clusters/dijkstra/webdav/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: books
  namespace: webdav
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  hostnames:
    - "books.nkmrk.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: books
          port: 80
